# pyalgo

./: .gitignore  .pre-commit-config.yaml  LinkedList.py  Makefile  MergeSort.py  Queue.py  README.md  Stack.py  benchmark.py  demo.py  pyproject.toml  requirements.txt
advanced_data_structures/: README.md  __init__.py  avl_tree.py  binary_heap.py  binomial_heap.py  fenwick_tree.py  fibonacci_heap.py  persistent_array.py  persistent_segment_tree.py  red_black_tree.py  splay_tree.py  union_find.py
backtracking/: README.md  crossword_solver.py  knights_tour.py  maze_solver.py  n_queens.py  sudoku_solver.py
compression/: huffman_coding.py  lz77.py  run_length_encoding.py
cryptography/: README.md  aes.py  caesar_cipher.py  rsa.py  vigenere_cipher.py
data_structures/: README.md  __init__.py  binary_search_tree.py  linked_list.py  queue.py  stack.py
dynamic_programming/: __init__.py  dp_algorithms.py
game_theory/: __init__.py  auction.py  minimax.py  nash_equilibrium.py
geometry/: __init__.py  basic_geometry.py  closest_pair.py  convex_hull.py  line_intersection.py  polygon.py
graph/: __init__.py  graph_algorithms.py
greedy/: activity_selection.py  fractional_knapsack.py  huffman_coding.py
machine_learning/: README.md  __init__.py  decision_trees.py  ensemble_methods.py  kmeans.py  linear_regression.py  neural_networks.py  svm.py
mathematical/: README.md  __init__.py  combinatorics.py  gcd.py  linear_algebra.py  modular_arithmetic.py  number_theory.py  numerical_methods.py  sieve_of_eratosthenes.py  statistics.py
network_flow/: __init__.py  flow_network.py  matching.py  max_flow.py  min_cost_flow.py
optimization/: README.md  __init__.py  differential_evolution.py  genetic_algorithm.py  particle_swarm.py  simulated_annealing.py
randomized/: README.md  __init__.py  bloom_filter.py  monte_carlo.py  randomized_quicksort.py  reservoir_sampling.py  skip_list.py
searching/: README.md  __init__.py  binary_search.py  linear_search.py
sorting/: README.md  __init__.py  bubble_sort.py  heap_sort.py  merge_sort.py  quick_sort.py
string_algorithms/: README.md  __init__.py  aho_corasick.py  anagram_detection.py  boyer_moore.py  kmp.py  longest_common_substring.py  longest_palindromic_substring.py  palindrome_checking.py  pattern_matching.py  rabin_karp.py  string_compression.py  suffix_array.py  trie.py  z_algorithm.py
tests/: README.md  test_activity_selection.py  test_advanced_data_structures.py  test_aho_corasick.py  test_anagram_detection.py  test_boyer_moore.py  test_compression.py  test_crossword_solver.py  test_fractional_knapsack.py  test_game_theory.py  test_gcd.py  test_geometry.py  test_huffman_coding.py  test_kmp.py  test_knights_tour.py  test_longest_common_substring.py  test_longest_palindromic_substring.py  test_machine_learning.py  test_mathematical.py  test_maze_solver.py  test_mergeSort.py  test_modular_arithmetic.py  test_n_queens.py  test_network_flow.py  test_optimization.py  test_queue.py  (+11 more)
(+8 files in other folders)
